# CoPilotPicoSDKTemplates

./: README.md
.github/: copilot-instructions.md
.github/agents/: firmware-reviewer.md  sdk-expert.md
.github/prompts/: add-unit-test.prompt.md  code-review.prompt.md  create-board.prompt.md  create-component.prompt.md  create-driver.prompt.md  debug-hardfault.prompt.md  optimize-memory.prompt.md
.github/workflows/: ci.yml
hooks/: commit-msg  install-hooks.sh  pre-commit
templates/: CMakeLists.txt
templates/src/: main.c
templates/src/module/: module.c  module.h
